# frameworkk-main

./: .gitignore  .replit  AUTHORS  Dockerfile  Procfile  README.md  ai_optimization_strategy.md  ai_relevance.md  developer_guide.md  documentation.md  framework_analysis.md  production_readiness.md  pyproject.toml  replit.md  requirements.txt  roadmap.md  security_audit_report.md  use_cases.md
public/: app.py  main.py
src/: README.md
src/framework/: README.md
src/framework/manager/: README.md  actuator.py  authenticator.py  defender.contract.json  defender.py  defender.test.py  executor.contract.json  executor.py  executor.test.py  messenger.contract.json  messenger.py  messenger.test.py  presenter.contract.json  presenter.py  presenter.test.py  sensor.py  storekeeper.contract.json  storekeeper.py  storekeeper.test.py  tester.py  trainer.py
src/framework/port/: README.md  actuator.py  authentication.contract.json  authentication.py  authentication.test.py  authorization.contract.json  authorization.py  authorization.test.py  encryption.py  message.py  perception.py  persistence.py  persistence.test.py  presentation.contract.json  presentation.py  presentation.test.py  sensor.py  test.py
src/framework/scheme/: README.md  adapters.json  attributes.json  messenger.json  session.json  storekeeper.json  tags.json  transaction.json  url.json  user.json  widgets.json
src/framework/service/: README.md  contract.contract.json  contract.test.py  factory.contract.json  factory.py  factory.test.py  language.contract.json  language.py  language.test.py  loader.contract.json  loader.py  loader.test.py  run.contract.json  run.py  run.test.py
src/infrastructure/: README.md
src/infrastructure/actuator/: README.md  ansible.py  flow.py  redis.py
src/infrastructure/authentication/: README.md  supabase.contract.json  supabase.py  supabase.test.py
src/infrastructure/authorization/: README.md  opa.py  verdict.contract.json  verdict.py  verdict.test.py
src/infrastructure/encryption/: README.md  hashing.py  sha512.py
src/infrastructure/message/: README.md  console.contract.json  console.py  console.test.py  log.py  mqtt.py  redis.py  websocket.py  websocket.test.py
src/infrastructure/perception/: README.md
src/infrastructure/persistence/: README.md  api.py  api.test.py  fs.py  jwt.py  jwt.test.py  redis.contract.json  redis.py  redis.test.py  sql.py  sql.test.py  supabase.py  web.py
src/infrastructure/presentation/: README.md  flutter.py  flutter.test.py  starlette.contract.json  starlette.py  starlette.test.py  wasm.py  wasm.test.py
src/infrastructure/sensor/: README.md
